crates/strider-analyze/tests/snapshots/v3__x86_kernel__builtins__clz64.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v6" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "v6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "7" -> "v6" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v8" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "7" -> "v8" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "10" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v8" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v12" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "11" -> "v12" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v13" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "11" -> "v13" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "10" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "14" -> "11" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "15" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v13" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v16" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "v16" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "17" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "17" -> "v16" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v18" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "17" -> "v18" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "15" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "20" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v12" -> "20" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v18" -> "20" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "21" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v22" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "21" -> "v22" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v23" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "21" -> "v23" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "20" -> "21" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "24" -> "21" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "25" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v22" -> "25" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v23" -> "25" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "26" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "25" -> "26" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "26" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "29" -> "26" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "30" -> "26" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "31" -> "26" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "31" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "30" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "29" [label="arg[1] ← EDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "28" [label="φ EAX", shape=house, fillcolor="#163030"];
  "25" -> "28" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "32" -> "28" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "33" -> "28" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "33" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "34" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x1f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="φ unique[0x59a00]:4", shape=house, fillcolor="#163030"];
  "10" -> "34" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "36" -> "34" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0x1f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "37" -> "34" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "37" [label="φ unique[0x59a00]:4", shape=house, fillcolor="#163030"];
  "5" -> "37" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "38" -> "37" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0x1f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "39" -> "37" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "39" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "41" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0x20:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "41" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "43" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x1f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "43" [label="φ unique[0x59a00]:4", shape=house, fillcolor="#163030"];
  "20" -> "43" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "45" -> "43" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x1f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "46" -> "43" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "46" [label="φ unique[0x59a00]:4", shape=house, fillcolor="#163030"];
  "15" -> "46" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "47" -> "46" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "47" [label="const 0x1f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "48" -> "46" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "48" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "46" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "29" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "51" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "51" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "53" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="arg[0] ← EAX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "54" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "54" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "56" -> "54" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "56" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "53" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "58" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "59" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "58" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "29" -> "58" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "58" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "60" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "60" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "62" -> "60" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "62" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "29" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
